.docker/dev-k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.dev.yml convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml -f docker-compose.dev.yml convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - env:
            - name: DATABASE_URL
              value: postgresql://postgres:arclight@db/arclight
            - name: FINDING_AID_DATA
              value: ./sample-ead
            - name: GOOGLE_ANALYTICS_DEBUG
              value: "true"
            - name: RAILS_ENV
              value: development
            - name: REDIS_URL
              value: redis://redis:6379
            - name: SOLR_URL
              value: "http://$(SOLR_SERVICE_HOST):$(SOLR_SERVICE_PORT)/solr/arclight"
          image: umich-arclight-staging:20220105.4
          imagePullPolicy: Never
          name: app
          ports:
            - containerPort: 3000
          resources: {}
#          volumeMounts:
#            - mountPath: /opt/app-root
#              name: app-claim0
      restartPolicy: Always
      volumes:
        - name: app-claim0
          persistentVolumeClaim:
            claimName: app-claim0
        - hostPath:
            path: /home/esty/github/mlibrary/dul-arclight
          name: app-hostpath0
status: {}
