.docker/dev-k8s/solr-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.dev.yml convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: solr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml -f docker-compose.dev.yml convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: solr
    spec:
      containers:
#        - command:
#            - docker-entrypoint.sh
#            - solr-precreate
#            - arclight
#            - /solr_config
        - image: umich-arclight-solr-staging:20220106.4
          imagePullPolicy: Never
          name: solr
          ports:
            - containerPort: 8983
          resources: {}
#          volumeMounts:
#            - mountPath: /solr_config
#              name: solr-hostpath0
#              readOnly: true
#            - mountPath: /var/solr/data/arclight
#              name: solr-hostpath1
      restartPolicy: Always
#      volumes:
#        - hostPath:
#            path: /home/esty/github/mlibrary/dul-arclight/solr/arclight/conf
#          name: solr-hostpath0
#        - hostPath:
#            path: /home/esty/github/mlibrary/dul-arclight/solr/arclight
#          name: solr-hostpath1
status: {}
